@@ -1,6 +1,6 @@
 package com.objectcomputing.checkins.services.memberprofile.memberphoto;
 
-import io.micronaut.context.annotation.Property;
+import io.micronaut.cache.CacheConfiguration;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.Controller;
@@ -11,7 +11,10 @@ import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.rules.SecurityRule;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.inject.Named;
 import jakarta.validation.constraints.NotNull;
+
+import java.time.Duration;
 
 import static io.micronaut.http.HttpHeaders.CACHE_CONTROL;
 
@@ -22,12 +25,17 @@ import static io.micronaut.http.HttpHeaders.CACHE_CONTROL;
 @Tag(name = "member photo")
 public class MemberPhotoController {
 
-    private final String expiry;
+    private final long expiry;
     private final MemberPhotoService memberPhotoService;
 
-    public MemberPhotoController(@Property(name = "micronaut.caches.photo-cache.expire-after-write") String expiry,
-                                 MemberPhotoService memberPhotoService) {
-        this.expiry = expiry;
+    public MemberPhotoController(
+            @Named("photo-cache") CacheConfiguration cacheConfiguration,
+            MemberPhotoService memberPhotoService
+    ) {
+        // If un-configured, default to 1 hour
+        this.expiry = cacheConfiguration.getExpireAfterWrite()
+                .map(Duration::toSeconds)
+                .orElseGet(() -> Duration.ofHours(1).toSeconds());
         this.memberPhotoService = memberPhotoService;
     }
 
@@ -41,6 +49,6 @@ public class MemberPhotoController {
     public HttpResponse<byte[]> userImage(@NotNull String workEmail) {
         byte[] photoData = memberPhotoService.getImageByEmailAddress(workEmail);
         return HttpResponse.ok(photoData)
-                .header(CACHE_CONTROL, String.format("public, max-age=%s", expiry));
+                .header(CACHE_CONTROL, "public, max-age=%d".formatted(expiry));
     }
 }
